--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
       - 'v*.*'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
@@ -18,7 +21,7 @@ jobs:
 
       - name: Package source files
         run: |
-          zip -r DaDa_OLED.zip DaDa_SH1106.cpp DaDa_SH1106.h DaDa_SSD1309.cpp DaDa_SSD1309.h library.properties LICENSE.txt README.md examples
+          zip -r DaDa_OLED.zip *
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -26,4 +29,3 @@ jobs:
           files: DaDa_OLED.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
